force-app/main/default/objects/Mecanismo__c/Mecanismo__c.object-meta.xml
<CustomObject>
    <label>Mecanismo</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mecanismos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>