force-app/main/default/objects/Mecanismo__c/fields/AltoMaximo__c.field-meta.xml
<CustomField>
    <fullName>AltoMaximo__c</fullName>
    <label>Alto Maximo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>