force-app/main/default/objects/Mecanismo__c/fields/AnchoMaximo__c.field-meta.xml
<CustomField>
    <fullName>AnchoMaximo__c</fullName>
    <label>Ancho Maximo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>