force-app/main/default/objects/Mecanismo__c/fields/PrecioSinFactura__c.field-meta.xml
<CustomField>
    <fullName>PrecioSinFactura__c</fullName>
    <label>Precio Sin Factura</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>