force-app/main/default/objects/Mecanismo__c/fields/SuperficieMaxima__c.field-meta.xml
<CustomField>
    <fullName>SuperficieMaxima__c</fullName>
    <label>Superficie Maxima</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>